--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/fontawesome-all.js"></script>
     <title>Jerry</title>
 </head>
 
@@ -14,10 +15,291 @@
         <div class="bannet-text">
             <h3>Hey,I am</h3>
             <h4>Jerry</h4>
-            <p>UI/UX Designer</p>
+            <p><span class="typingText"></span>
+                <span class="typingCursorWhite">|</span></p>
         </div>
     </div>
+    <div class="area-about">
+        <div class="about-title">
+            <h4>關於</h4>
+        </div>
+        <div class="about-text">
+            <p>Jerry</p>
+            <p>我是一位UI / UX設計師 為了配合我的設計技能，所以我的工具箱內我會HTML5跟CSS，JQuery，Javascript...等語言，我喜歡看新的網頁或是操作介面，然後創造出更好的使用者介面。
+            </p>
+        </div>
+    </div>
+    <div class="area-experience">
+        <div class="experience-title">
+            <h4>經驗</h4>
+        </div>
+        <div class="experience-text">
+            <p class="experience-text-company">Smart-evision
+                <a href="http://www.lcnet.com.tw/">
+                    <i class="fas fa-link"></i>
+                </a>
+            </p>
+            <p class="experience-text-year">2016 - 至今</p>
+            <p>在這裡擔任UI / UX設計一職，負責設計公司網站，還有公司產品UI(使用者介面)和UX(使用者體驗)的優化還有公司的EDM設計
+            </p>
+        </div>
+    </div>
+    <div class="area-skill">
+        <div class="skill-title">
+            <h4>技能</h4>
+        </div>
+        <div class="skill-text skill-text1">
+            <div>
+                <h5 class="skill-type">設計技能</h5>
+                <table class="skill-porgressBar-table">
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="skill-text skill-text1">
+            <div>
+                <h5 class="skill-type">設計技能</h5>
+                <table class="skill-porgressBar-table">
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="40" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="skill-porgressBar-item">
+                            <div>
+                                <p class="item-name">UI(使用者介面)</p>
+                                <progress value="30" max="100">1</progress>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="area-websiteWorks">
+        <div class="websiteWorks-title">
+            <h4>網站作品</h4>
+        </div>
+        <div class="websiteWorks-district">
+            <div class="websiteWorks-item">
+                <div class="websiteWorks-images">
+                    <img src="image/smart-evision.PNG" alt="">
+                </div>
+                <div class="websiteWorks-text">
+                    <p class="websiteWorks-text-company">Smart-evision
+                        <a href="http://www.lcnet.com.tw/">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </p>
+                    <p class="websiteWorks-text-year">2016 - 至今</p>
+                    <p class="websiteWorks-text-detail">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic reprehenderit quia quis eius error iure
+                        iusto quasi molestias beatae velit vero, vitae dolorem laborum, sit aspernatur alias dolorum, sint
+                        minima?
+                    </p>
+                </div>
+            </div>
+            <div class="websiteWorks-item">
+                <div class="websiteWorks-images">
+                    <img src="image/smart-evision.PNG" alt="">
+                </div>
+                <div class="websiteWorks-text">
+                    <p class="websiteWorks-text-company">Smart-evision
+                        <a href="http://www.lcnet.com.tw/">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </p>
+                    <p class="websiteWorks-text-year">2016 - 至今</p>
+                    <p class="websiteWorks-text-detail">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic reprehenderit quia quis eius error iure
+                        iusto quasi molestias beatae velit vero, vitae dolorem laborum, sit aspernatur alias dolorum, sint
+                        minima?
+                    </p>
+                </div>
+            </div>
+            <div class="websiteWorks-item">
+                <div class="websiteWorks-images">
+                    <img src="image/smart-evision.PNG" alt="">
+                </div>
+                <div class="websiteWorks-text">
+                    <p class="websiteWorks-text-company">Smart-evision
+                        <a href="http://www.lcnet.com.tw/">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </p>
+                    <p class="websiteWorks-text-year">2016 - 至今</p>
+                    <p class="websiteWorks-text-detail">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic reprehenderit quia quis eius error iure
+                        iusto quasi molestias beatae velit vero, vitae dolorem laborum, sit aspernatur alias dolorum, sint
+                        minima?
+                    </p>
+                </div>
+            </div>
+            <div class="websiteWorks-item">
+                <div class="websiteWorks-images">
+                    <img src="image/smart-evision.PNG" alt="">
+                </div>
+                <div class="websiteWorks-text">
+                    <p class="websiteWorks-text-company">Smart-evision
+                        <a href="http://www.lcnet.com.tw/">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </p>
+                    <p class="websiteWorks-text-year">2016 - 至今</p>
+                    <p class="websiteWorks-text-detail">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic reprehenderit quia quis eius error iure
+                        iusto quasi molestias beatae velit vero, vitae dolorem laborum, sit aspernatur alias dolorum, sint
+                        minima?
+                    </p>
+                </div>
+            </div>
+            <div class="websiteWorks-item">
+                <div class="websiteWorks-images">
+                    <img src="image/smart-evision.PNG" alt="">
+                </div>
+                <div class="websiteWorks-text">
+                    <p class="websiteWorks-text-company">Smart-evision
+                        <a href="http://www.lcnet.com.tw/">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </p>
+                    <p class="websiteWorks-text-year">2016 - 至今</p>
+                    <p class="websiteWorks-text-detail">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic reprehenderit quia quis eius error iure
+                        iusto quasi molestias beatae velit vero, vitae dolorem laborum, sit aspernatur alias dolorum, sint
+                        minima?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="area-photo">
+        <div class="photo-title">
+            <h4>日常拍照作品</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ea iure fugiat? Recusandae maiores incidunt at
+                deleniti necessitatibus deserunt nobis facilis reiciendis ipsa, ullam reprehenderit sit. Nulla facilis neque
+                distinctio?Laborum autem quaerat doloremque in cupiditate, saepe ipsum perferendis eum quidem aperiam temporibus,
+                id reiciendis dicta, impedit labore beatae odit delectus vel possimus. Consectetur numquam est voluptatibus
+                iure? Accusantium, tempore!</p>
+        </div>
+        <div class="photo-container">
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180112_230016_455.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180211_022311_325.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180224_230336_585.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180224_113319_841.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180225_135440_694.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180112_230016_455.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180211_022311_325.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180224_230336_585.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180224_113319_841.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180225_135440_694.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180112_230016_455.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180211_022311_325.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180224_230336_585.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180224_113319_841.jpg" alt="">
+            </div>
+            <div class="photo-block">
+                <img src="image/photo/IMG_20180225_135440_694.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <footer class="area-footer">
+        <div class="photo-title">
+            <h4>JERRY</h4>
+            <p> JERRY © 2018. All Right Reserved, Designed By JERRY.</p>
+        </div>
+    </footer>
 
+    <script src="js/main.js"></script>
 </body>
 
 </html>
