新增：網站的樣式與版面調整

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <img src="image/ui/beefnoodle.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>牛小棧</h5>
-                        <p>依照發想創建的牛肉麵網站設計</p>
+                        <p>因為之前有配合賣牛肉麵的店家，想推廣跟更認識他們，所以發想創建牛肉麵的網站設計</p>
                     </div>
                 </div>
                 <!--  -->
@@ -217,7 +217,7 @@
                     <img src="image/ui/2020login-reddesign.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>產品 login 重新設計</h5>
-                        <p>因為以前的login頁面樸素單調，因此重新設計login的版面，讓他具有美化好的現代感</p>
+                        <p>因為之前的login頁面樸素單調，因此重新設計login的版面，讓他具有美化好的現代感</p>
                     </div>
                 </div>
                 <!--  -->
@@ -225,7 +225,7 @@
                     <img src="image/ui/gympool1.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>GYM Pool</h5>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non, alias eius eveniet, vero iste similique voluptas neque vitae impedit ea dolor doloremque nostrum obcaecati quia totam! Ullam, reiciendis nobis!</p>
+                        <p>從認識的朋友身邊得知，他正在經營一個破2萬人的健身房會籍轉讓平台。因為粉絲團資訊量大，很容易被洗不同的資訊洗掉，所以才覺得要創造一個平台</p>
                     </div>
                 </div>
                 <!--  -->
@@ -233,7 +233,7 @@
                     <img src="image/ui/POMODORO.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>番茄鐘 POMODORO</h5>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non, alias eius eveniet, vero iste similique voluptas neque vitae impedit ea dolor doloremque nostrum obcaecati quia totam! Ullam, reiciendis nobis!</p>
+                        <p>這個是配合六角學院的活動(精神時光屋)，製作的番茄鐘UI設計</p>
                     </div>
                 </div>
                 <!--  -->
@@ -241,7 +241,7 @@
                     <img src="image/ui/music.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>音樂播放器</h5>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non, alias eius eveniet, vero iste similique voluptas neque vitae impedit ea dolor doloremque nostrum obcaecati quia totam! Ullam, reiciendis nobis!</p>
+                        <p>這個是配合六角學院的活動(精神時光屋)，製作的音樂播放器UI設計</p>
                     </div>
                 </div>
                 <!--  -->
@@ -249,7 +249,7 @@
                     <img src="image/ui/CreditCard.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>信用卡結帳</h5>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non, alias eius eveniet, vero iste similique voluptas neque vitae impedit ea dolor doloremque nostrum obcaecati quia totam! Ullam, reiciendis nobis!</p>
+                        <p>這是配合Daily UI的活動</p>
                     </div>
                 </div>
                 <!--  -->
@@ -257,7 +257,7 @@
                     <img src="image/ui/color-picker–1.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>Color Picker</h5>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam non, alias eius eveniet, vero iste similique voluptas neque vitae impedit ea dolor doloremque nostrum obcaecati quia totam! Ullam, reiciendis nobis!</p>
+                        <p>重新設計的調色盤，因為原本的太單調，不方便使用</p>
                     </div>
                 </div>
             </div>
@@ -320,7 +320,6 @@
                             <i class="fa fa-link " aria-hidden="true "></i>
                         </a>
                     </div>
-                    <p>Title</p>
                     <img src="image/edm/edm-en.png " alt=" ">
                 </div>
                 <div class="edmDesign-li edmDesign-li2 ">
