調整：圖片尺寸大小與版面優化

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <li data-id="menu4" class="fabb">
                     <h3>平面設計</h3>
                 </li>
-                <li data-id="menu5" class="fabb">
+                <!-- <li data-id="menu5" class="fabb">
                     <h3>特殊的</h3>
-                </li>
+                </li> -->
                 <li data-id="menu6" class="fabb">
                     <h3>EDM版面</h3>
                 </li>
@@ -175,7 +175,7 @@
                     <img src="image/ui/2021newWeb.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>公司新品牌網站</h5>
-                        <p>公司建立了一個新的企業級系統與App，是描述一個邁向低程式碼開發的產品，因此討論網站架構與Mockup</p>
+                        <p>公司建立了一個新的企業級系統與App，是描述一個邁向低程式碼開發的產品，因此討論網站架構與Mockup。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -183,7 +183,7 @@
                     <img src="image/ui/2020newWeb-en.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>公司國際版的網站</h5>
-                        <p>向外擴展，公司邁向國際發展的網站，目的是希望更讓國外客戶認識我們</p>
+                        <p>向外擴展，公司邁向國際發展的網站，目的是希望更讓國外客戶認識我們。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -191,7 +191,7 @@
                     <img src="image/ui/2022newyear-prototype.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>2022年 虎躍新程</h5>
-                        <p>是一個虎年要歲序更新，感謝大家過去一年來的鼓勵與相挺，祝福各位虎躍新程與虎哩賺大錢！的版面</p>
+                        <p>是一個虎年要歲序更新，感謝大家過去一年來的鼓勵與相挺，祝福各位虎躍新程與虎哩賺大錢！的版面。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -209,7 +209,7 @@
                     <img src="image/ui/beefnoodle.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>牛小棧</h5>
-                        <p>因為之前有配合賣牛肉麵的店家，想推廣跟更認識他們，所以發想創建牛肉麵的網站設計</p>
+                        <p>因為之前有配合賣牛肉麵的店家，想推廣跟更認識他們，所以發想創建牛肉麵的網站設計。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -217,7 +217,7 @@
                     <img src="image/ui/2020login-reddesign.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>產品 login 重新設計</h5>
-                        <p>因為之前的login頁面樸素單調，因此重新設計login的版面，讓他具有美化好的現代感</p>
+                        <p>因為之前的login頁面樸素單調，因此重新設計login的版面，讓他具有美化好的現代感。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -225,7 +225,7 @@
                     <img src="image/ui/gympool1.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>GYM Pool</h5>
-                        <p>從認識的朋友身邊得知，他正在經營一個破2萬人的健身房會籍轉讓平台。因為粉絲團資訊量大，很容易被洗不同的資訊洗掉，所以才覺得要創造一個平台</p>
+                        <p>從認識的朋友身邊得知，他正在經營一個破2萬人的健身房會籍轉讓平台。因為粉絲團資訊量大，很容易被洗不同的資訊洗掉，所以才覺得要創造一個平台。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -233,7 +233,7 @@
                     <img src="image/ui/POMODORO.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>番茄鐘 POMODORO</h5>
-                        <p>這個是配合六角學院的活動(精神時光屋)，製作的番茄鐘UI設計</p>
+                        <p>這個是配合六角學院的活動(精神時光屋)，製作的番茄鐘UI設計。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -241,7 +241,7 @@
                     <img src="image/ui/music.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>音樂播放器</h5>
-                        <p>這個是配合六角學院的活動(精神時光屋)，製作的音樂播放器UI設計</p>
+                        <p>這個是配合六角學院的活動(精神時光屋)，製作的音樂播放器UI設計。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -249,7 +249,7 @@
                     <img src="image/ui/CreditCard.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>信用卡結帳</h5>
-                        <p>這是配合Daily UI的活動</p>
+                        <p>這是配合Daily UI的活動。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -303,7 +303,7 @@
                 <h4>中秋節Banner設計</h4>
                 <div class="portfolio-graphicDesign-descraption ">
                     <p>祝福中秋佳節，月圓人團圓。</p>
-                    <p>在寄送每月的EDM，遇到中秋節，因此有需要製作中秋節Banner設計。</p>
+                    <p>在寄送每月的EDM，遇到中秋節，因此有需要製作中秋節Banner設計</p>
                 </div>
                 <div class="portfolio-graphicDesign-image ">
                     <img src="./image/photo/2021photo-mid.png " alt=" ">
