修改：scroll除錯與版面圖片調整

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h3>特殊的</h3>
                 </li> -->
                 <li data-id="menu6" class="fabb">
-                    <h3>EDM版面</h3>
+                    <h3>電子報EDM</h3>
                 </li>
             </ul>
         </div>
@@ -277,7 +277,7 @@
                 </div>
             </div>
             <!--  -->
-            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area2 graphicDesignSection " id="graphicDesign2 " style="background: #e3ce78; ">
+            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area2 graphicDesignSection " id="graphicDesign2" style="background: #e3ce78; ">
                 <h4>2021新年Banner</h4>
                 <div class="portfolio-graphicDesign-descraption ">
                     <p>金牛迎春、金牛報喜</p>
@@ -289,7 +289,7 @@
 
             </div>
             <!--  -->
-            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area3 graphicDesignSection " id="graphicDesign3 " style="background: #ede9e9; ">
+            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area3 graphicDesignSection " id="graphicDesign3" style="background: #ede9e9; ">
                 <h4>研討會Banner設計</h4>
                 <div class="portfolio-graphicDesign-descraption ">
                     <p>每年都有好幾場的研討會，都會需要廣告的圖，因此符合當場的活動標題與內容訂定設計 Banner 方向</p>
@@ -299,7 +299,7 @@
                 </div>
             </div>
             <!--  -->
-            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area4 graphicDesignSection " id="graphicDesign4 " style="background: #212b2e; ">
+            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area4 graphicDesignSection " id="graphicDesign4" style="background: #212b2e; ">
                 <h4>中秋節Banner設計</h4>
                 <div class="portfolio-graphicDesign-descraption ">
                     <p>祝福中秋佳節，月圓人團圓。</p>
