--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             </div> -->
             <ul>
                 <li data-id="menu1" class="fabb active">
-                    <h3>首頁</h3>
+                    <h3>關於我</h3>
                 </li>
                 <li data-id="menu2" class="fabb">
                     <h3>開發｜Develop</h3>
                 </li>
                 <li data-id="menu3" class="fabb">
-                    <h3>原型設計｜UI Prototype</h3>
+                    <h3>介面設計｜UI Prototype</h3>
                 </li>
                 <li data-id="menu4" class="fabb">
                     <h3>平面設計</h3>
@@ -42,28 +42,84 @@
 
     <div class="portfolio-banner-background">
         <!-- 首頁 -->
-        <div class="jumbotron portfolio-banner-area section" id="menu1" style='background-size: cover;' data-paroller-factor="-0.5" data-paroller-factor-sm="-0.2" data-paroller-factor-xs="-0.1">
-            <div class="bannet-text">
+        <div class="jumbotron portfolio-banner-area section" id="menu1" style='background-size: cover;' data-paroller-factor="-0.75" data-paroller-factor-sm="-0.2" data-paroller-factor-xs="-0.1">
+            <div class="bannet-text-left">
+                <h3>專業技能</h3>
+                <div class="portfolio-individual">
+                    <div class="portfolio-language">
+                        <h6>網頁語言：</h6>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS／SCSS</li>
+                            <li>Javascript</li>
+                            <li>JQuery</li>
+                        </ul>
+                    </div>
+                    <div class="portfolio-language">
+                        <h6>設計：</h6>
+                        <ul>
+                            <li>UI介面設計</li>
+                            <li>ICON設計</li>
+                            <li>平面設計</li>
+                        </ul>
+                    </div>
+                    <div class="portfolio-language">
+                        <h6>繪圖軟體：</h6>
+                        <ul>
+                            <li>Adobe Illustrator</li>
+                            <li>Adobe Photoshop</li>
+                            <li>Adobe XD</li>
+                            <li>Figma</li>
+                        </ul>
+                    </div>
+                    <div class="portfolio-language">
+                        <h6>行銷：</h6>
+                        <ul>
+                            <li>EDM電子報製作</li>
+                            <li>SEO搜尋引擎優化</li>
+                            <li>Google Analytics</li>
+                        </ul>
+                    </div>
+                </div>            </div>
+            <div class="bannet-text-right">
                 <h3>Jerry Shen</h3>
                 <p><span class="typingText"></span>
                     <span class="typingCursorWhite">|</span>
                 </p>
                 <h4>Hello</h4>
                 <div class="portfolio-block">
-                    <p>我是Jerry！一位UI設計跨入寫網頁程式的的設計人</p>
-                </div>
-                <div class="portfolio-individual">
-                    <div class="portfolio-language">
-                        <h6>程式語言：</h6>
-                        <p>HTML、CSS、SCSS、Javascript、JQuery</p>
-                    </div>
-                    <div class="portfolio-language">
-                        <h6>繪圖軟體</h6>
-                        <p>Adobe Illustrator、Photoshop、XD、Figma</p>
-                    </div>
+                    <p>我是Jerry沈俊宏！一位網頁設計跨入寫網頁程式的的設計師</p>
+                    <div class="portfolio-individual">
+                        <div class="portfolio-language">
+                            <table>
+                                <tr>
+                                    <td>e-mail：</td>
+                                    <td>fast199111@gmail.com</td>
+                                </tr>
+                                <tr>
+                                    <td>學歷：</td>
+                                    <td>畢業於中國科技大學 視覺傳達設計系</td>
+                                </tr>
+                                <tr>
+                                    <td>出生日期：</td>
+                                    <td>1991/11/26</td>
+                                </tr>
+                                <tr>
+                                    <td>自我介紹：</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2">
+                                        <p>我是一名網頁設計師，也是前端工程師，在公司待的是RD部門，所以經常跟我們的工程師配合與學習。在過去工作中，我運用Adobe XD設計Prototype討論網站與產品的介面設計討論，並且透過HTML與CSS搭配Javascript與jQuery來開發網站與產品的介面與功能。</p>
+                                        <p>而我也經常與行銷部門等配合製作平面廣告圖片、EDM電子報與SEO搜尋引擎的優化與架構調整，並且埋入Google Analytics做網站分析幫助他們追蹤數據</p>            
+                                    </td>
+                                </tr>
 
-                </div>
 
+                            </table>
+                        </div>                       
+                    </div>
+                </div>
             </div>
         </div>
         <!-- 首頁 -->
@@ -73,7 +129,7 @@
                 <div class="portfolio-develop-cards">
                     <ul>
                         <li class="portfolio-develop-card portfolio-develop-card1">
-                            <h5>公司台灣網站</h5>
+                            <h5>公司台灣網站開發與設計</h5>
                             <p>001</p>
                             <div class="portfolio-tooBar">
                                 <a href="https://www.lcnet.com.tw/" target="_blank">
@@ -82,7 +138,7 @@
                             </div>
                         </li>
                         <li class="portfolio-develop-card portfolio-develop-card2">
-                            <h5>公司國際版網站</h5>
+                            <h5>公司國際版網站開發與設計</h5>
                             <p>002</p>
                             <div class="portfolio-tooBar">
                                 <a href="https://www.lcnet.com.tw/en" target="_blank">
@@ -91,7 +147,7 @@
                             </div>
                         </li>
                         <li class="portfolio-develop-card portfolio-develop-card3">
-                            <h5>2022虎年祝賀</h5>
+                            <h5>2022虎年祝賀開發與設計</h5>
                             <p>003</p>
                             <div class="portfolio-tooBar">
                                 <a href="https://www.lcnet.com.tw/images/2022veredm/EDM_Web-2022-v2.html" target="_blank">
@@ -100,7 +156,7 @@
                             </div>
                         </li>
                         <li class="portfolio-develop-card portfolio-develop-card4">
-                            <h5>2020鼠年祝賀</h5>
+                            <h5>2020鼠年祝賀開發與設計</h5>
                             <p>004</p>
                             <div class="portfolio-tooBar">
                                 <a href="https://www.lcnet.com.tw/images/2020veredm/EDM_Web-2020-v2.html" target="_blank">
