修改：修改關於我的版面與內容

--- a/index.html
+++ b/index.html
@@ -44,82 +44,92 @@
         <!-- 首頁 -->
         <div class="jumbotron portfolio-banner-area section" id="menu1" style='background-size: cover;' data-paroller-factor="-0.75" data-paroller-factor-sm="-0.2" data-paroller-factor-xs="-0.1">
             <div class="bannet-text-left">
-                <h3>專業技能</h3>
-                <div class="portfolio-individual">
-                    <div class="portfolio-language">
-                        <h6>網頁語言：</h6>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS／SCSS</li>
-                            <li>Javascript</li>
-                            <li>JQuery</li>
-                        </ul>
-                    </div>
-                    <div class="portfolio-language">
-                        <h6>設計：</h6>
-                        <ul>
-                            <li>UI介面設計</li>
-                            <li>ICON設計</li>
-                            <li>平面設計</li>
-                        </ul>
-                    </div>
-                    <div class="portfolio-language">
-                        <h6>繪圖軟體：</h6>
-                        <ul>
-                            <li>Adobe Illustrator</li>
-                            <li>Adobe Photoshop</li>
-                            <li>Adobe XD</li>
-                            <li>Figma</li>
-                        </ul>
-                    </div>
-                    <div class="portfolio-language">
-                        <h6>行銷：</h6>
-                        <ul>
-                            <li>EDM電子報製作</li>
-                            <li>SEO搜尋引擎優化</li>
-                            <li>Google Analytics</li>
-                        </ul>
-                    </div>
-                </div>            </div>
-            <div class="bannet-text-right">
                 <h3>Jerry Shen</h3>
                 <p><span class="typingText"></span>
                     <span class="typingCursorWhite">|</span>
                 </p>
-                <h4>Hello</h4>
-                <div class="portfolio-block">
-                    <p>我是Jerry沈俊宏！一位網頁設計跨入寫網頁程式的的設計師</p>
-                    <div class="portfolio-individual">
-                        <div class="portfolio-language">
-                            <table>
-                                <tr>
-                                    <td>e-mail：</td>
-                                    <td>fast199111@gmail.com</td>
-                                </tr>
-                                <tr>
-                                    <td>學歷：</td>
-                                    <td>畢業於中國科技大學 視覺傳達設計系</td>
-                                </tr>
-                                <tr>
-                                    <td>出生日期：</td>
-                                    <td>1991/11/26</td>
-                                </tr>
-                                <tr>
-                                    <td>自我介紹：</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2">
-                                        <p>我是一名網頁設計師，也是前端工程師，在公司待的是RD部門，所以經常跟我們的工程師配合與學習。在過去工作中，我運用Adobe XD設計Prototype討論網站與產品的介面設計討論，並且透過HTML與CSS搭配Javascript與jQuery來開發網站與產品的介面與功能。</p>
-                                        <p>而我也經常與行銷部門等配合製作平面廣告圖片、EDM電子報與SEO搜尋引擎的優化與架構調整，並且埋入Google Analytics做網站分析幫助他們追蹤數據</p>            
-                                    </td>
-                                </tr>
-
-
-                            </table>
-                        </div>                       
-                    </div>
-                </div>
+                <button><a href="mailto:fast199111@gmail.com?subject=Hi!Jerry,我想與您聯繫">Say Hello!</a></button>
+            </div>
+            <div class="bannet-text-right">
+                <div class="bannet-text-block">
+                    <h4>Hello</h4>
+                    <div class="portfolio-block">
+                        <p>我是Jerry沈俊宏！一位網頁設計跨入寫網頁程式的的設計師</p>
+                        <div class="portfolio-individual">
+                            <div class="portfolio-language">
+                                <table>
+                                    <tr>
+                                        <td>e-mail：</td>
+                                        <td>fast199111@gmail.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>學歷：</td>
+                                        <td>畢業於中國科技大學 視覺傳達設計系</td>
+                                    </tr>
+                                    <tr>
+                                        <td>出生日期：</td>
+                                        <td>1991/11/26</td>
+                                    </tr>
+                                    <tr>
+                                        <td>自我介紹：</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <p>我是一名網頁設計師，也是前端工程師，在公司待的是RD部門，所以經常跟我們的工程師配合與學習。在過去工作中，我運用Adobe XD設計Prototype討論網站與產品的介面設計討論，並且透過HTML與CSS搭配Javascript與jQuery來開發網站與產品的介面與功能。</p>
+                                            <p>而我也經常與行銷部門等配合製作平面廣告圖片、EDM電子報與SEO搜尋引擎的優化與架構調整，並且埋入Google Analytics做網站分析幫助他們追蹤數據</p>            
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>專業技能：</td>
+                                        <td></td> 
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <div class="portfolio-individual">
+                                                <div class="portfolio-language-profession">
+                                                    <h6>網頁語言：</h6>
+                                                    <ul>
+                                                        <li>HTML</li>
+                                                        <li>CSS／SCSS</li>
+                                                        <li>Javascript</li>
+                                                        <li>JQuery</li>
+                                                    </ul>
+                                                </div>
+                                                <div class="portfolio-language-profession">
+                                                    <h6>設計：</h6>
+                                                    <ul>
+                                                        <li>UI介面設計</li>
+                                                        <li>ICON設計</li>
+                                                        <li>平面設計</li>
+                                                    </ul>
+                                                </div>
+                                                <div class="portfolio-language-profession">
+                                                    <h6>繪圖軟體：</h6>
+                                                    <ul>
+                                                        <li>Adobe Illustrator</li>
+                                                        <li>Adobe Photoshop</li>
+                                                        <li>Adobe XD</li>
+                                                        <li>Figma</li>
+                                                    </ul>
+                                                </div>
+                                                <div class="portfolio-language-profession">
+                                                    <h6>行銷：</h6>
+                                                    <ul>
+                                                        <li>EDM電子報製作</li>
+                                                        <li>SEO搜尋引擎優化</li>
+                                                        <li>Google Analytics</li>
+                                                    </ul>
+                                                </div>
+                                            </div>   
+                                        </td>
+                                    </tr>
+                                </table>
+    
+                            </div>                       
+                        </div>
+                    </div>                    
+                </div>                
             </div>
         </div>
         <!-- 首頁 -->
