修改：調整一些hover的效果與關於我的文字內容

--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                                     </tr>
                                     <tr>
                                         <td colspan="2">
-                                            <p>我是一名網頁設計師，也是前端工程師，在公司待的是RD部門，所以經常跟我們的工程師配合與學習。在過去工作中，我運用Adobe XD設計Prototype討論網站與產品的介面設計討論，並且透過HTML與CSS搭配Javascript與jQuery來開發網站與產品的介面與功能。</p>
-                                            <p>而我也經常與行銷部門等配合製作平面廣告圖片、EDM電子報與SEO搜尋引擎的優化與架構調整，並且埋入Google Analytics做網站分析幫助他們追蹤數據</p>            
+                                            <p>我是一名網頁設計師，也是前端工程師，在公司待的是RD部門，所以經常跟我們的工程師配合與學習。在過去的工作中，我運用Adobe XD、Figma設計Mockup、
+                                                Prototype討論網站與產品的介面設計，並且透過HTML與CSS搭配Javascript與jQuery來開發網站與產品的介面與功能。</p>
+                                            <p>而我也經常與行銷部門等配合運用Adobe Illustrator、Photoshop製作平面廣告圖片、EDM電子報與SEO搜尋引擎的優化與架構調整，並且埋入Google Analytics做網站分析幫助他們追蹤數據</p>            
                                         </td>
                                     </tr>
                                     <tr>
